--- a/style/component/site-nav.scss
+++ b/style/component/site-nav.scss
@@ -11,14 +11,27 @@ site-nav {
 	left: 0;
 	right: 0;
 	z-index: 10;
+	background-color: var(--pal-sidebar);
 
 	@media(min-width: break.$medium) {
 		position: absolute;
 		right: auto;
 		width: 17rem;
 		z-index: 1;
-		left: -100%;
-		padding-left: 100%;
+		height: 100%;
+
+		@media(min-width: break.$medium) {
+			&::before {
+				content: "";
+				display: block;
+				position: absolute;
+				top: 0;
+				left: -50vw;
+				width: 50vw;
+				height: 100vh;
+				background-color: var(--pal-sidebar);
+			}
+		}
 	}
 
 	details {
@@ -78,7 +91,6 @@ site-nav {
 		}
 
 		>div {
-			background: var(--pal-sidebar);
 			position: absolute;
 			z-index: 1;
 
@@ -88,11 +100,15 @@ site-nav {
 			overflow-y: auto;
 			clip-path: inset(0 0 100% 0);
 			transition: clip-path var(--transition-time) var(--transition-function);
+			background-color: var(--pal-sidebar);
+			scrollbar-color: rgba(black, 0.25) transparent;
+			scrollbar-width: thin;
 
 			@media(min-width: break.$medium) {
 				transition: none;
-				padding-top: 8rem;
+				margin-top: calc(var(--size-logo) + 2rem);
 				clip-path: none !important;
+				height: calc(100svh - (var(--size-logo) + 2rem));
 			}
 		}
 
@@ -122,6 +138,13 @@ site-nav {
 	}
 
 	nav {
+		a {
+			&:hover {
+				text-decoration: underline;
+				color: var(--pal-primary);
+			}
+		}
+
 		div {
 
 		}
@@ -149,16 +172,27 @@ site-nav {
 				}
 
 				&.selected {
-					text-decoration: underline;
-
 					a {
+						position: relative;
 						color: var(--pal-primary);
+
+						&::before {
+							content: "";
+							position: absolute;
+							left: 0;
+							top: calc(50% - 0.25rem);
+							width: 0.5rem;
+							height: 0.5rem;
+							border-radius: 100%;
+							background-color: var(--pal-primary);
+						}
 					}
 				}
 
 				a,label {
 					display: block;
 					padding: 0.5rem 1rem;
+					margin-right: 1rem;
 					text-decoration: none;
 					color: var(--pal-text);
 					cursor: pointer;
@@ -203,7 +237,7 @@ site-nav {
 						padding-left: 0;
 
 						a {
-							//margin-left: -1rem;
+
 						}
 					}
 				}
