--- a/style/element/body.scss
+++ b/style/element/body.scss
@@ -11,12 +11,14 @@ body {
 		margin-left: auto;
 		margin-right: auto;
 		position: relative;
+		overflow-y: scroll;
 
 		&::before {
 			content: "";
 			display: block;
-			position: absolute;
+			position: fixed;
 			top: 0;
+			bottom: 0;
 			left: -100%;
 			width: 100%;
 			height: 100%;
