--- a/style/decoration/typography.scss
+++ b/style/decoration/typography.scss
@@ -1,3 +1,13 @@
 %d-typography {
 	max-width: 48rem;
+
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 8rem;
+
+	}
+
+	p, ul, ol {
+		font-size: 1.25rem;
+		line-height: 1.5
+	}
 }
