--- a/style/decoration/typography.scss
+++ b/style/decoration/typography.scss
@@ -1,13 +1,40 @@
+@use "../variable/break";
+
 %d-typography {
 	max-width: 48rem;
+	font-size: 1.0rem;
+	transition: font-size 0.5s ease-in-out;
+
+	@media(min-width: break.$medium) {
+		font-size: 1.1rem;
+	}
+	@media(min-width: break.$large) {
+		font-size: 1.25rem;
+	}
 
 	h1, h2, h3, h4, h5, h6 {
 		margin-top: 8rem;
+	}
 
+	h1 {
+		font-size: 2m;
+	}
+
+	header {
+		h1 {
+			font-size: 2em;
+
+			@media(min-width: break.$small) {
+				font-size: 3em;
+			}
+		}
 	}
 
 	p, ul, ol {
-		font-size: 1.25rem;
-		line-height: 1.5
+		line-height: 1.5;
+
+		@media(min-width: break.$small) {
+			font-size: 1.1em;
+		}
 	}
 }
