--- a/style/component/docs-search.scss
+++ b/style/component/docs-search.scss
@@ -26,8 +26,13 @@ docs-search {
 			top: -1rem;
 			left: -1rem;
 			right: -80rem;
-			height: calc(100% + 1rem);
+			height: calc(100% + 1.5rem);
 			background-color: var(--pal-page);
+			border-bottom: 4px solid transparent;
+		}
+
+		body.scrolled &::before {
+			border-bottom-color: var(--pal-sidebar);
 		}
 	}
 
