--- a/style/page/index.scss
+++ b/style/page/index.scss
@@ -68,5 +68,42 @@ body.uri--index {
 				}
 			}
 		}
+
+		blockquote+h2 {
+			font-size: 10vw;
+
+			@media(min-width: break.$medium) {
+				font-size: 6vw;
+			}
+			@media(min-width: break.$large) {
+				font-size: 5rem;
+			}
+
+			a {
+				display: none;
+			}
+
+			span {
+				&:nth-of-type(1),
+				&:nth-of-type(2),
+				&:nth-of-type(3) {
+					display: block;
+				}
+
+				&:nth-of-type(2)::before,
+				&:nth-of-type(3)::after {
+					content: "";
+					display: inline-block;
+					margin-right: 0.5rem;
+					width: 3em;
+					height: 1rem;
+					background: var(--pal-link);
+				}
+
+				&:nth-of-type(3)::after {
+					width: 4em;
+				}
+			}
+		}
 	}
 }
