--- a/style/style.scss
+++ b/style/style.scss
@@ -14,6 +14,7 @@
 
 @use "component/global-header.scss";
 @use "component/docs-search.scss";
+@use "component/docs-search-results.scss";
 @use "component/site-nav.scss";
 
 @use "page/index.scss";
