--- a/style/style.scss
+++ b/style/style.scss
@@ -9,8 +9,10 @@
 @use "element/a.scss";
 @use "element/article.scss";
 @use "element/body.scss";
+@use "element/code.scss";
 @use "element/html.scss";
 @use "element/main.scss";
+@use "element/pre.scss";
 
 @use "component/global-header.scss";
 @use "component/docs-search.scss";
@@ -24,7 +26,7 @@ html {
 	font-size: 18px;
 }
 
-* {
+*:not(pre,code) {
 	font-family: "Ubuntu", sans-serif;
 }
 
