wip: homepage typography

--- a/style/page/index.scss
+++ b/style/page/index.scss
@@ -69,7 +69,8 @@ body.uri--index {
 			}
 		}
 
-		blockquote+h2 {
+		blockquote+h1 {
+			margin-top: 8rem;
 			font-size: 10vw;
 
 			@media(min-width: break.$medium) {
