--- a/style/decoration/typography.scss
+++ b/style/decoration/typography.scss
@@ -13,9 +13,15 @@
 		max-width: 54rem;
 	}
 
+	h1 {
+		margin-top: 12rem;
+	}
+	h2, h3, h4, h5, h6 {
+		margin-top: 4rem;
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		position: relative;
-		margin-top: 8rem;
 
 		a {
 			position: absolute;
