wip: initial search functionality

--- a/style/component/docs-search-results.scss
+++ b/style/component/docs-search-results.scss
@@ -43,7 +43,7 @@ docs-search-results {
 				border-bottom: 2px solid var(--pal-sidebar);
 			}
 
-			a {
+			>a {
 				display: block;
 				padding: 1rem 2.5rem;
 				text-decoration: none;
